# py-gdelt

./: .commitlintrc.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  release-please-config.json  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  examples.yml  publish.yml  schema-drift.yml  validate-pr.yml
api/client/: index.html  index.md
api/endpoints/: index.html  index.md
api/exceptions/: index.html  index.md
api/filters/: index.html  index.md
api/models/: index.html  index.md
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  fix-docstrings-plan.md  index.md  ngrams_endpoint.md
docs/api/: analytics.md  client.md  endpoints.md  exceptions.md  filters.md  models.md
docs/examples/: advanced.md  basic.md  index.md
docs/getting-started/: configuration.md  data-sources.md  installation.md  quickstart.md
docs/plans/: 2026-01-25-refactor-shared-gdelt-date-parsing-plan.md  2026-01-30-fix-filter-ux-issues-plan.md  2026-02-08-feat-analytics-layer-plan.md
docs/user-guide/: deduplication.md  errors.md  events.md  gkg.md  lookups.md  ngrams.md  rest-apis.md  streaming.md
examples/: README.md  async_concurrent_example.py  basic_client_usage.py  bigquery_example.py  context_api_example.py  download_gdelt_files.py  events_endpoint_example.py  geo_api_example.py  gkg_example.py  index.html  ngrams_example.py  query_mentions.py  tv_api_example.py
examples/advanced/: index.html  index.md
examples/basic/: index.html  index.md
gdelt_docs/: CLAUDE.md  GCAM-MASTER-CODEBOOK_sample.txt  LOOKUP-GKGTHEMES_sample.txt  gcam_page.md  gdelt_event_cookbook.md  gkg_cookbook.md
gdelt_docs/cameo_docs/: CAMEO.Manual.1.1b3.md  README.md  chapter_0_introduction.md  chapter_10_regional_dictionaries.md  chapter_11_supplements.md  chapter_1_introductions.md  chapter_2_verb_codebook.md  chapter_2_verb_codebook_sample.md  chapter_3_actor_codebook.md  chapter_4_religious_coding_scheme.md  chapter_5_ethnic_coding_scheme.md  chapter_6_cameo_event_codes.md  chapter_7_keds_project_actor_codes.md  chapter_8_religious_classification.md  chapter_9_iso_3166_codes.md
getting-started/configuration/: index.html  index.md
getting-started/data-sources/: index.html
getting-started/installation/: index.html  index.md
getting-started/quickstart/: index.html  index.md
implementation_notes/: BIGQUERY_IMPLEMENTATION.md  CLIENT_IMPLEMENTATION_SUMMARY.md  CLIENT_USAGE.md  DATAFETCHER_IMPLEMENTATION.md  EVENTS_ENDPOINT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MENTIONS_ENDPOINT_IMPLEMENTATION.md  MENTIONS_ENDPOINT_QUICK_REF.md  NGRAMS_IMPLEMENTATION.md
notebooks/: 01_getting_started.ipynb  02_advanced_patterns.ipynb  03_visualization.ipynb  README.md
plans/: api_spec_v1.md  convert-gdelt-docs-to-lookups.md  docs-enhancement-plan.md  feat-add-missing-filebased-datasets.md  feat-graph-datasets.md  gdelt-python-client-implementation.md  integration-tests-schema-drift-detection.md  linting-cleanup-and-configuration-audit.md  linting-cleanup-v2.md  potential_memory_issue.md  potential_memory_issue_v2.md  potential_memory_issue_v3.md  python_profiling_basic.md  spec_review.md  v1-post-development-examples-tests-docs.md
plans/2026-01-25-refactor-shared-gdelt-date-parsing-plan/: index.html
plans/discussions/: security.md
scripts/: analyze_ignores.sh  convert_gkg_themes.py  convert_lookups.py  detailed_analysis.sh  enrich_cameo_codes.py  lint_progress.sh  regenerate_countries.py
search/: search_index.json
src/py_gdelt/: __init__.py  _security.py  cache.py  client.py  config.py  exceptions.py  filters.py
tests/: integration_trump_venezuela.py  test_client.py  test_dates.py  test_doc_coverage.py  test_endpoints_mentions.py  test_events_endpoint.py  test_memory_stream.py  test_parsers_gkg.py  test_runner.py  test_sources_aggregation.py  test_sources_bigquery.py  test_sources_fetcher.py  test_sources_files.py  validation_mentions.py
tests/benchmarks/: README.md  __init__.py  test_bench_vgkg_parsing.py
tests/endpoints/: __init__.py  test_events.py
tests/integration/: conftest.py  test_bigquery.py  test_context_api.py  test_doc_api.py  test_events_files.py  test_filter_consistency.py  test_geo_api.py  test_new_datasets_schema_discovery.py  test_schema_drift.py  test_tv_api.py
tests/models/: test_vgkg.py
tests/unit/: test_analytics_foundation.py  test_analytics_mixins.py  test_broadcast_ngrams_parser.py  test_cache.py  test_config.py  (+28 more)
todos/: 001-completed-p2-inconsistent-aenter-behavior.md  001-pending-p1-missing-graphendpoint-tests.md  001-resolved-p2-fix-incorrect-docstrings.md  002-completed-p2-tvgkg-constructor-inconsistency.md  002-pending-p2-fix-section-comment-names.md  002-resolved-p2-remove-model-config-from-attributes.md  003-completed-p2-missing-query-methods.md  003-pending-p2-extract-stream-error-handling.md  003-resolved-p2-extract-shared-date-parsing.md  004-completed-p2-missing-sync-wrappers.md  004-pending-p2-remove-unused-bigquery-params.md  004-resolved-p2-fix-ggg-language-filter-inconsistency.md  005-completed-p2-radio-ngrams-url-validation.md  005-deferred-p2-add-sync-wrappers-to-graphendpoint.md  005-pending-p2-consolidate-filter-duplication.md  006-completed-p2-tvgkg-exception-handling.md  006-pending-p3-remove-unnecessary-comments.md  006-resolved-p2-memory-efficiency-json-parsing.md  007-completed-p2-tvngrams-station-validation.md  007-pending-p3-remove-dead-code.md  007-resolved-p2-thread-safety-warned-fields.md  008-completed-p3-redundant-type-aliases.md  008-pending-p3-move-model-config-to-mixin.md  008-resolved-p3-add-decompression-size-limit.md  009-completed-p3-vgkg-duplicate-http-client.md  009-pending-p3-document-ggg-no-languages.md  009-resolved-p3-cache-known-fields-in-mixin.md  010-completed-p3-docstring-safe-search-type.md  011-completed-p3-tvgkgfilter-theme-validation.md
(+90 files in other folders)
