[project]
name = "py-gdelt"
version = "0.1.0"
description = "Using GDELT data"
readme = "README.md"
authors = [
    { name = "Robert Wasilewski", email = "wasilewski.robert@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
bigquery = ["google-cloud-bigquery>=3.0"]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]